Flare v1.14 (WIP)

Flare v1.13.04

Engine features:

* Added 'bar_gfx' property to menus/enemy.txt for setting the "fill" image

Engine fixes:

* Fix crash when trying to read a non-existent file with INCLUDE
* Fix passive powers not being correctly re-applied after death
* Improve performance of WidgetListBox by caching all items instead of just the visible ones



Flare v1.13 (https://flarerpg.org/2022/01/31/flare-1-13/)

Engine features:

* Added additional requirement properties (requires_status, requires_item, etc) to enemy and NPC map objects. The properties now match what is available for map events.
* When 'mouse aim' is disabled, the Shift key can now be used with the direction keys to change the player's orientation without moving.
* Added optional 'fog-of-war' feature (r-a-cristian-93)
* Added support for multiple sets/loadouts of equipped items (r-a-cristian-93)
* Added random_status attribute to Events for setting/unsetting a random status from a list.
* Reworked gamepad handling using the SDL_GameController API.
* Several new key bindings, many of which will benefit gamepad users.
* Added an "action picker" for interacting with items/powers when using a gamepad or a touchscreen.
* Added misc.selection_rect_corner_size to engine/widget_settings.txt. This allows for a nicer "targeting reticle" appearance when selecting widgets without a mouse.
* Added 'background' property for all menus. Menus will fall back to the existing hard-coded filenames if this property is omitted.
* Added 'close', 'label_title', and 'action_list' properties to MenuConfirm configuration.
* Added 'render_layers' section to StatBlock definitions. It has the same syntax and functionality as engine/hero_layers.txt, so that file is now considered deprecated.
* Added 'animation_slots' section to StatBlock definitions. This allows for multiple animation layers on non-player entities that don't have an inventory like the player.