@@ -1543,9 +1543,11 @@ bool MenuInventory::canActivateItem(ItemID item) {
 int MenuInventory::getEquippedSetCount(size_t set_id) {
 	int quantity = 0;
 	for (int i=0; i<MAX_EQUIPPED; i++) {
-		ItemID item_id = inventory[EQUIPMENT].storage[i].item;
-		if (items->items[item_id].set == set_id) {
-			quantity++;
+		if (isActive(i)) {
+			ItemID item_id = inventory[EQUIPMENT].storage[i].item;
+			if (items->items[item_id].set == set_id) {
+				quantity++;
+			}
 		}
 	}
 	return quantity;
